--- a/application/build.gradle
+++ b/application/build.gradle
@@ -12,6 +12,7 @@ repositories {
 dependencies {
     implementation(project(":domain"))
     testImplementation platform('org.junit:junit-bom:5.9.1')
+    testImplementation 'org.mockito:mockito-junit-jupiter:5.7.0'
     testImplementation 'org.junit.jupiter:junit-jupiter'
 }
 
