--- a/infrastructure/build.gradle
+++ b/infrastructure/build.gradle
@@ -1,9 +1,16 @@
 plugins {
     id 'java'
+    id 'org.springframework.boot' version '3.1.5'
+    id 'io.spring.dependency-management' version '1.1.3'
 }
 
 group = 'com.fc.kelton.admin.catalogo.infrastructure'
 version = '1.0-SNAPSHOT'
+
+bootJar {
+    setArchiveFileName('application.jar')
+    destinationDirectory.set(file("${rootProject.buildDir}/libs"))
+}
 
 repositories {
     mavenCentral()
@@ -12,8 +19,12 @@ repositories {
 dependencies {
     implementation(project(":domain"))
     implementation(project(":application"))
-    testImplementation platform('org.junit:junit-bom:5.9.1')
-    testImplementation 'org.junit.jupiter:junit-jupiter'
+
+    implementation('org.springframework.boot:spring-boot-starter-web') {
+        exclude module: 'spring-boot-starter-tomcat'
+    }
+    implementation 'org.springframework.boot:spring-boot-starter-undertow'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
 test {
