--- a/infrastructure/build.gradle
+++ b/infrastructure/build.gradle
@@ -20,11 +20,17 @@ dependencies {
     implementation(project(":domain"))
     implementation(project(":application"))
 
+    implementation 'com.mysql:mysql-connector-j'
+
     implementation('org.springframework.boot:spring-boot-starter-web') {
         exclude module: 'spring-boot-starter-tomcat'
     }
+
     implementation 'org.springframework.boot:spring-boot-starter-undertow'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testRuntimeOnly 'com.h2database:h2'
 }
 
 test {
