setting up flyway, creating category jpa entity and first migration

--- a/infrastructure/build.gradle
+++ b/infrastructure/build.gradle
@@ -1,7 +1,18 @@
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath 'org.flywaydb:flyway-mysql:10.0.1'
+    }
+}
+
 plugins {
     id 'java'
+    id 'application'
     id 'org.springframework.boot' version '3.1.5'
     id 'io.spring.dependency-management' version '1.1.3'
+    id 'org.flywaydb.flyway' version '10.0.1'
 }
 
 group = 'com.fc.kelton.admin.catalogo.infrastructure'
@@ -31,6 +42,12 @@ dependencies {
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'com.h2database:h2'
+}
+
+flyway {
+    url = System.getenv('FLYWAY_DB') ?: 'jdbc:mysql://localhost:3306/adm_videos'
+    user = System.getenv('FLYWAY_USER') ?: 'root'
+    password = System.getenv('FLYWAY_PASS') ?: '123456'
 }
 
 test {
