create strategy for integration tests and create category use case integration test

--- a/infrastructure/build.gradle
+++ b/infrastructure/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     implementation(project(":application"))
 
     implementation 'com.mysql:mysql-connector-j'
+    implementation 'io.vavr:vavr:0.10.4'
 
     implementation('org.springframework.boot:spring-boot-starter-web') {
         exclude module: 'spring-boot-starter-tomcat'
