document the api

--- a/infrastructure/build.gradle
+++ b/infrastructure/build.gradle
@@ -31,8 +31,11 @@ dependencies {
     implementation(project(":domain"))
     implementation(project(":application"))
 
-    implementation 'com.mysql:mysql-connector-j'
     implementation 'io.vavr:vavr:0.10.4'
+    implementation 'com.mysql:mysql-connector-j'
+
+    implementation 'org.springdoc:springdoc-openapi-webmvc-core:1.7.0'
+    implementation 'org.springdoc:springdoc-openapi-ui:1.7.0'
 
     implementation('org.springframework.boot:spring-boot-starter-web') {
         exclude module: 'spring-boot-starter-tomcat'
